--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
     "jwt-decode": "^3.1.2",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "next-images": "^1.8.4",
     "react": "^18.2.0",
