--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.9.2",
-    "@mui/x-date-pickers": "^5.0.3",
+    "@mui/x-date-pickers": "^5.0.20",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "ckeditor4-react": "^4.0.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.7",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
@@ -38,7 +42,8 @@
     "sweetalert2": "^11.6.5",
     "sweetalert2-react-content": "^5.0.7",
     "validator": "^13.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
