--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.40.0",
     "axios": "^0.27.2",
     "chart.js": "^4.3.0",
     "ckeditor4-react": "^4.0.0",
@@ -31,6 +32,7 @@
     "moment": "^2.29.4",
     "next-images": "^1.8.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
