--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.9.2",
     "@mui/x-date-pickers": "^5.0.20",
+    "@react-pdf/renderer": "^3.1.9",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -24,9 +25,12 @@
     "dayjs": "^1.11.7",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
@@ -42,6 +46,7 @@
     "react-router-dom": "^6.3.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.12",
     "sass": "^1.54.1",
     "sweetalert2": "^11.6.5",
     "sweetalert2-react-content": "^5.0.7",
